--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React JSON Tree Viewer",
+  "name": "Get JSON data that renders a tree component",
   "icons": [
     {
       "src": "favicon.ico",
