rename package name; update readme with live demo link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-json-tree-viewer",
+  "name": "react-ts-json-tree-view",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
